# glance

./: .gitignore  README.md  pyproject.toml
glance/: __init__.py  cli.py  config.py  embed.py  ingest.py  search.py  store.py  tui.py
tests/: README.md  conftest.py  test_embed.py  test_semantic.py  test_store.py
tests/fixtures/text/: cars.md  cats.md  dogs.md  mountains.md  ocean.md
